--- a/.github/workflows/hlint.yml
+++ b/.github/workflows/hlint.yml
@@ -20,7 +20,7 @@ jobs:
     - name: 'Checking code'
       uses: rwe/actions-hlint-run@v2
       with:
-        hlint-bin: "hlint --with-group=extra"
+        hlint-bin: "hlint --git -j4 --with-group=extra --ignore-glob='**/testdata/**' --ignore-glob='**/test/data/**'"
         fail-on: error
         path: .
 
