--- a/plugins/hls-stan-plugin/test/testdata/extensions-cabal-file/cabal-file-test.cabal
+++ b/plugins/hls-stan-plugin/test/testdata/extensions-cabal-file/cabal-file-test.cabal
@@ -4,6 +4,6 @@ version: 0.0.0.0
 
 library
   exposed-modules: CabalFileTest
-  hs-source-dirs: extension-tests/cabal-file
+  hs-source-dirs: extensions-cabal-file
   -- Specifically, we're testing that Stan respects the following extension definition:
   default-extensions: StrictData
