--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -108,7 +108,7 @@ jobs:
         # to include 'new' in the filters, since many of our test suites are in the
         # same package.
         run: |
-          echo "test-options: --rerun-update --rerun-filter failures,exceptions,new" >> cabal.project.local
+          echo 'test-options: --rerun-update --rerun-filter "failures,exceptions,new"' >> cabal.project.local
 
       - if: matrix.test
         name: Test hls-graph
