--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -181,7 +181,7 @@ library hls-cabal-plugin
     , hls-plugin-api        == 2.6.0.0
     , hls-graph             == 2.6.0.0
     , lens
-    , lsp                   ^>=2.3
+    , lsp                   ^>=2.4
     , lsp-types             ^>=2.1
     , regex-tdfa            ^>=1.3.1
     , stm
@@ -206,6 +206,7 @@ test-suite hls-cabal-plugin-tests
     , bytestring
     , Cabal-syntax          >= 3.7
     , filepath
+    , ghcide
     , haskell-language-server:hls-cabal-plugin
     , hls-test-utils    == 2.6.0.0
     , lens
@@ -309,7 +310,7 @@ library hls-call-hierarchy-plugin
     , hiedb
     , hls-plugin-api        == 2.6.0.0
     , lens
-    , lsp                    >=2.3
+    , lsp                    >=2.4
     , sqlite-simple
     , text
 
@@ -876,7 +877,7 @@ library hls-alternate-number-format-plugin
     , hls-graph
     , hls-plugin-api       == 2.6.0.0
     , lens
-    , lsp                  ^>=2.3.0.0
+    , lsp                  ^>=2.4
     , mtl
     , regex-tdfa
     , syb
@@ -1091,7 +1092,7 @@ library hls-gadt-plugin
     , hls-plugin-api         == 2.6.0.0
     , haskell-language-server:hls-refactor-plugin
     , lens
-    , lsp                    >=2.3
+    , lsp                    >=2.4
     , mtl
     , text
     , transformers
@@ -1137,7 +1138,7 @@ library hls-explicit-fixity-plugin
     , ghcide                == 2.6.0.0
     , hashable
     , hls-plugin-api        == 2.6.0.0
-    , lsp                   >=2.3
+    , lsp                   >=2.4
     , text
 
   default-extensions: DataKinds
@@ -1566,7 +1567,7 @@ library hls-semantic-tokens-plugin
     , ghcide                == 2.6.0.0
     , hls-plugin-api        == 2.6.0.0
     , lens
-    , lsp                    >=2.3
+    , lsp                    >=2.4
     , text
     , transformers
     , bytestring
