use dlist to accumulate token result and remove result in the state of tokenizor

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -1592,6 +1592,7 @@ library hls-semantic-tokens-plugin
     , syb
     , array
     , deepseq
+    , dlist
     , hls-graph == 2.6.0.0
     , template-haskell
     , data-default
